apps/ragflow/base/ragflow/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: ragflow-gateway
spec:
  addresses:
    - type: IPAddress
      value: 10.140.79.7
  gatewayClassName: cilium
  listeners:
    - name: https-ragflow
      hostname: ragflow.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: ragflow-tls
            kind: Secret
    - name: https-ragflow-api
      hostname: ragflow-api.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: ragflow-api-tls
            kind: Secret
    - name: https-ragflow-mcp
      hostname: ragflow-mcp.inspection.alpha.canada.ca
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: ragflow-mcp-tls
            kind: Secret
