apps/ragflow/base/ragflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ragflow-ingress
  annotations:
    lbipam.cilium.io/ips: 10.140.79.7
    ingress.cilium.io/loadbalancer-mode: dedicated
spec:
  ingressClassName: cilium
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ragflow
                port:
                  name: http
